# optomotrist

./: CMakeLists.txt  README.md  justfile
.github/workflows/: build.yml
docs/: building.md  faust-codegen.md
dsp/: optomotrist.dsp
scripts/: codegen.py  element_dev.sh
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/components/brand/: TopBar.cpp  TopBar.h
src/components/controls/: RotaryKnob.cpp  RotaryKnob.h
src/components/meters/: GainReductionMeter.cpp  GainReductionMeter.h
src/presets/: PluginPresetManager.cpp
src/ui/: OptomotristColors.h  PluginLookAndFeel.cpp  PluginLookAndFeel.h
